--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- animate css -->
     <link rel = "stylesheet" href = "resources/animate.css-main/animate.css">
     <!-- custom (main) css -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     
@@ -29,7 +29,7 @@
       <nav class = "navbar">
         <div class = "container">
           <div class = "brand-and-toggler">
-            <a href = "index.html" class = "navbar-brand"> <img src="assets/IAF.png" class="IAF" alt="">
+            <a href = "index.html" class = "navbar-brand"> <img src="IAF.png" class="IAF" alt="">
               IAF
             </a>
             <button type = "button" class = "navbar-toggler" id = "navbar-toggler">
@@ -79,7 +79,7 @@
     <!-- section -->
     <section class="afsa-section text-center">
       <div class="container position-relative">
-          <img src="assets/slider5.jpg" alt="Forensic Science Image" class="afsa-image">
+          <img src="slider5.jpg" alt="Forensic Science Image" class="afsa-image">
           <div class="afsa-card text-start">
               <h2 class="afsa-title">What is IAF?</h2>
               <p class="text-container">
@@ -132,7 +132,7 @@
       <div class = "container">
         <div class = "row">
           <div class = "feature-left wow animate__animated animate__fadeInUp animate__slow">
-            <img src = "assets/explore.webp" alt = "">
+            <img src = "explore.webp" alt = "">
           </div>
           <div class = "feature-right wow animate__animated animate__fadeInUp animate__slow">
             <div class = "title">
@@ -450,7 +450,7 @@
         <div class = "row owl-carousel owl-theme wow animate__animated animate__fadeInUp animate__slow">
           <div class = "testimonial-item">
             <div class = "testimonial-img">
-              <img src = "assets/test-1.jpg" alt = "">
+              <img src = "test-1.jpg" alt = "">
             </div>
             <p class="stars">
               <ion-icon name="star" class="stars"></ion-icon>
@@ -466,7 +466,7 @@
 
           <div class = "testimonial-item">
             <div class = "testimonial-img">
-              <img src = "assets/test-2.jpg" alt = "">
+              <img src = "test-2.jpg" alt = "">
             </div>
             <p class="stars">
               <ion-icon name="star" class="stars"></ion-icon>
@@ -481,7 +481,7 @@
 
           <div class = "testimonial-item">
             <div class = "testimonial-img">
-              <img src = "assets/test-3.jpg" alt = "">
+              <img src = "test-3.jpg" alt = "">
             </div>
             <p class="stars">
               <ion-icon name="star" class="stars"></ion-icon>
