--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </nav>
 
       <div class = "hero-div center container">
-        <h1>International Academy of of Forensics</h1>
+        <h1>International Academy of Forensics</h1>
         <p class = "animate__animated animate__fadeInUp animate__slow">Excellence in Forensics.</p>
 
         <div class = "hero-btns animate__animated animate__fadeInUp animate__slow">
