--- a/index.html
+++ b/index.html
@@ -383,6 +383,133 @@
       </div>
     </section>
     <!-- end of faq section -->
+    
+    <!-- summit section -->
+<section class="summit" id="summit">
+  <div class="summit-bg-overlay"></div>
+  <div class="container">
+
+    <div class="summit-badge">
+      <span>Upcoming Event</span>
+    </div>
+
+    <div class="summit-header">
+      <p class="summit-collab">International Academy of Forensics <span>in collaboration with</span> The Guardian Newspaper, Nigeria</p>
+      <h2 class="summit-title">2026 Global Forensics Summit</h2>
+      <div class="summit-theme-box">
+        <p class="summit-theme-label">Theme</p>
+        <p class="summit-theme-text">
+          "Forensic Investigation and Criminal Intelligence: Strengthening the Administration of Justice in the Age of Technological Advancement"
+        </p>
+      </div>
+    </div>
+
+    <div class="summit-meta row">
+      <div class="summit-meta-item">
+        <span class="summit-meta-icon"><ion-icon name="calendar-outline"></ion-icon></span>
+        <div>
+          <h4>Date</h4>
+          <p>Monday, 22 – Friday, 26 June, 2026</p>
+        </div>
+      </div>
+      <div class="summit-meta-item">
+        <span class="summit-meta-icon"><ion-icon name="location-outline"></ion-icon></span>
+        <div>
+          <h4>Venue</h4>
+          <p>Federal Palace Hotel, Plots 6 & 8, Ahmadu Bello Way, Victoria Island, Lagos, Nigeria</p>
+        </div>
+      </div>
+      <div class="summit-meta-item">
+        <span class="summit-meta-icon"><ion-icon name="people-outline"></ion-icon></span>
+        <div>
+          <h4>Open To</h4>
+          <p>Public Participation — Forensic Experts, Legal Officers, Security Agencies & More</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="summit-body row">
+      <div class="summit-col">
+        <h3><ion-icon name="flag-outline"></ion-icon> Objectives of the Summit</h3>
+        <ul class="summit-list">
+          <li>Chart an enduring roadmap for emerging frontiers in Forensic Investigation and Administration of Justice</li>
+          <li>Address pressing global challenges in the Forensic Investigation and Criminal Intelligence profession</li>
+          <li>Fix lingering uncertainties in the Administration of Justice for enhanced credibility and public confidence</li>
+          <li>Provide a platform for stakeholders to deliberate on forensic investigation, criminal intelligence, and policy framework</li>
+          <li>Bridge the gap between forensic advancements and their ethical application in the justice system</li>
+          <li>Foster dialogue on standardisation of forensic investigation methods and recognition of forensic evidence in court</li>
+        </ul>
+      </div>
+
+      <div class="summit-col">
+        <h3><ion-icon name="person-outline"></ion-icon> Who Should Attend</h3>
+        <ul class="summit-list">
+          <li>Forensic Investigation Practitioners & Criminal Intelligence Officers</li>
+          <li>Members of the Bar and Bench, Public Prosecutors, Paralegal Officers</li>
+          <li>Military, Para-Military, Law Enforcement & Security Officers</li>
+          <li>Economic & Financial Crime Investigators</li>
+          <li>Legislators, Senior Government Officials, Policy Makers</li>
+          <li>Auditors, Fraud Investigators/Examiners, Academics & Researchers</li>
+          <li>Medical Practitioners, Scientists, Engineers, Environmentalists</li>
+          <li>Corporate Leaders, Business Managers, Real Estate Investors</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="summit-registration">
+      <h3>Registration Fees</h3>
+      <div class="summit-fees row">
+
+        <div class="summit-fee-card">
+          <div class="summit-fee-flag">🇳🇬</div>
+          <h4>Local Participants</h4>
+          <div class="summit-fee-item">
+            <span class="fee-label">Early Bird <em>(Deadline: 30 April, 2026)</em></span>
+            <span class="fee-amount">₦350,000</span>
+          </div>
+          <div class="summit-fee-item">
+            <span class="fee-label">Late Registration <em>(01 May – 10 June, 2026)</em></span>
+            <span class="fee-amount">₦400,000</span>
+          </div>
+          <div class="summit-bank">
+            <p><strong>Bank:</strong> First Bank of Nigeria</p>
+            <p><strong>Account Name:</strong> IAF Forensics Summit</p>
+            <p><strong>Account No.:</strong> 2047382323</p>
+          </div>
+        </div>
+
+        <div class="summit-fee-card summit-fee-card--intl">
+          <div class="summit-fee-flag">🌍</div>
+          <h4>International Participants</h4>
+          <div class="summit-fee-item">
+            <span class="fee-label">Early Bird <em>(Deadline: 30 April, 2026)</em></span>
+            <span class="fee-amount">USD $250</span>
+          </div>
+          <div class="summit-fee-item">
+            <span class="fee-label">Late Registration <em>(01 May – 10 June, 2026)</em></span>
+            <span class="fee-amount">USD $300</span>
+          </div>
+          <div class="summit-bank">
+            <p><strong>Bank:</strong> First Bank of Nigeria</p>
+            <p><strong>Account Name:</strong> IAF Forensics Summit</p>
+            <p><strong>Account No.:</strong> 2047382938</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="summit-attractions">
+      <p><ion-icon name="sparkles-outline"></ion-icon> <strong>Side Attractions:</strong> Gala Night &nbsp;|&nbsp; Exhibitions &nbsp;|&nbsp; Cultural Performances</p>
+    </div>
+
+    <div class="summit-cta center">
+      <a href="#contact" class="btn-white">Register Now</a>
+    </div>
+
+  </div>
+</section>
+<!-- end of summit section -->
 
     <!-- pricing section -->
     <!-- <section class = "pricing" id = "pricing">
