--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
               <li class = "nav-item">
                 <a href = "#contact" class = "nav-link">contact us</a>
               </li>
+              <li class="nav-item">
+                 <a href="#summit" class="nav-link">Summit 2026</a>
+              </li>
             </ul>
           </div>
         </div>
