--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     </div>
 
     <div class="summit-cta center">
-      <a href="#contact" class="btn-white">Register Now</a>
+      <a href="https://forms.gle/wiuqJUrbM5yF4Nma7" class="btn-white">Register Now</a>
     </div>
 
   </div>
